# bfc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.ssa
include/instructions/: add.hh  get.hh  instruction.hh  left.hh  loop.hh  print.hh  right.hh  sub.hh
include/lexer/: lexer.hh  token.hh
include/memory/: memory.hh
src/: CMakeLists.txt  bfc.c  dynamic_array.h  executor.c  executor.h  lexer.c  lexer.h  main.cc  token.c  token.h  token_da.c  token_da.h
src/instructions/: CMakeLists.txt  instruction.cc
src/lexer/: CMakeLists.txt  lexer.cc  token.cc
src/memory/: CMakeLists.txt
src/parser/: CMakeLists.txt
